Updated RPS code and added a UI

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
+
+    <button id="rock">Rock</button>
+    <Button id="paper">Paper</Button>
+    <button id="scissors">Scissors</button>
     <script src="javascript.js"></script>
 
     
